Incluir tela de autenticação

--- a/templates/model_page.html
+++ b/templates/model_page.html
@@ -4,6 +4,11 @@
     {% include "model_header.html" %}
 </head>
 <body>
+    <div align="end">
+        <a href="/logout">Logout</a>
+    </div>
+    <h1>Agenda Multiusuário - Python e Django</h1>
+
     {% block content %} {% endblock %}
 
     {% include "model_footer.html" %}
