--- a/templates/evento.html
+++ b/templates/evento.html
@@ -6,19 +6,22 @@
     <form action="submit" method="post">
         {% csrf_token %}
         <div>
+            <input type="number" name="id_evento" value="{{ evento.id }}" hidden>
+        </div>
+        <div>
             <label>Título</label>
-            <input type="text" name="titulo">
+            <input type="text" name="titulo" value="{{ evento.titulo }}">
         </div>
 
         <div>
             <label>Data do Evento:</label>
-            <input type="datetime-local" name="data_evento">
+            <input type="datetime-local" name="data_evento" value="{{ evento.get_data_input_evento }}">
         </div>
 
         <div>
             <label>Descrição</label>
             <br>
-            <textarea name="descricao"></textarea>
+            <textarea name="descricao">{{ evento.descricao }}</textarea>
         </div>
 
         <div>
