Adicionar listas por JsonResponse. Adicionar retorno do Http404

--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -10,8 +10,13 @@
     <ul>
         {% for evento in eventos %}
             <li>
-                {{ evento.titulo }} - {{ evento.get_data_evento }}
-                ( <a href="evento/?id={{ evento.id }}">Editar</a> / <a href="evento/delete/{{ evento.id }}/">Excluir</a> )
+                <div {% if evento.get_evento_atrasado %}
+                    style="color:red"
+                {% endif %}>
+                    {{ evento.titulo }} - {{ evento.get_data_evento }}
+                    ( <a href="evento/?id={{ evento.id }}">Editar</a>
+                    / <a href="evento/delete/{{ evento.id }}/">Excluir</a> )
+                </div>
             </li>
         {% endfor %}
     </ul>
